# tero.platform

./: .env.example  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LISENCE  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  STATUS.md  Tasklist.md  deny.toml  justfile  toughts.md
.cargo/: audit.toml
.sqlx/: query-0d76bda81be3037b074496a48e1105b488636c37fe2bbfead2352be262778f64.json  query-0e9946a1ee2497be071f9527309fca04d98badb81c80c15ea8a2a74494b05cb9.json  query-0f2a529558e78d86fdc028f113fe5f9934c46f8e3ac0af7abc70b88e0c799364.json  query-1838fd58a46f400838a16c93b27b9db372f1eacce3f87859aeae982219141be8.json  query-1b14992db1a821a566209397d7d8a895e64c845b910346e71b28342f6a0347ee.json  query-236bc0b0dc9a86f6132db5ed955154031c6bd3f51709825226a131e19c95bb9b.json  query-23a16acd4fe8d4c7ed18adc0189ddf67a2e6949008fe6ef49f9a4bd01767f7d6.json  query-24876b915d79def20e92ce5b0c57dd47ac3b82db1ab94f7f5a41fc5410c61db5.json  query-25d3c5c4c9c0e3bb4326f41937e85e40e14bb61606f519bf5f96af0aa37d0986.json  query-279ff0f485f37cadde90b1a64c6096adce0bf3b5e1f0ce36ec242448ca131ed4.json  query-2ce993c85adaf2d14f2680b1a9b43f510714d9bf67ad712a96806fe8f4c0cdae.json  query-342a6868316b82e426eed393570917a3194474d30220032e81b68e9b34f23b76.json  query-3bf2880a7abe4b036424e4c3b3a3c17e672c01f93690516a1eb527aa326c944b.json  query-45e4fc50e6c2fcd1cbcf2511c2f54174f072f625cf5f243790b5485296251aa4.json  query-4769c70d9d361cd5b51c0343d762dcedfe205504b78282e008516779c91598e6.json  query-53a7aa39979b9516d44cd212cbd46e8310ba66c6c5d90ee30cd76e13981212c9.json  (+28 more)
migrations/: 0001_schema.down.sql  (+10 more)
(+81 files in other folders)
