[package]
name = "tero_platform"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.5", features = [
    "bit-vec",
    "macros",
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
config = "0.15.16"
dashmap = "6.1.0"
futures = "0.3.31"
axum-valid = "0.24.0"
validator = { version = "0.20.0", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
